crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_all_separators.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
( ) { } [ ] ; , . ... @ ::

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    BogusCompilationUnitItem
      LParen "(" @ 0..1 trailing=[Whitespace " "]
      RParen ")" @ 2..3 trailing=[Whitespace " "]
      LBrace "{" @ 4..5 trailing=[Whitespace " "]
      RBrace "}" @ 6..7 trailing=[Whitespace " "]
      LBracket "[" @ 8..9 trailing=[Whitespace " "]
      RBracket "]" @ 10..11 trailing=[Whitespace " "]
      Semicolon ";" @ 12..13 trailing=[Whitespace " "]
      Comma "," @ 14..15 trailing=[Whitespace " "]
      Dot "." @ 16..17 trailing=[Whitespace " "]
      Ellipsis "..." @ 18..21 trailing=[Whitespace " "]
      At "@" @ 22..23 trailing=[Whitespace " "]
      DoubleColon "::" @ 24..26
  Eof "" @ 26..26

diagnostics:
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..1 message="unexpected token at top level"

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(1) }) message=unexpected token at top level
