crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_boolean_literals.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
true false

syntax:
syntax:
CompilationUnit
  ErrorNode
    BooleanLiteral "true" @ 0..4 trailing=[Whitespace " "]
    BooleanLiteral "false" @ 5..10
  Eof "" @ 10..10

diagnostics:
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..4 message="unexpected token at top level"

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(4) }) message=unexpected token at top level
