crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_decimal_floating_point_literal_forms.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
1. .2 3e+4 5e-6 7f 8D 9.0d 1.e2 .2E-3 1.2e3F

syntax:
syntax:
CompilationUnit
  ImportDeclarationList
  CompilationUnitDeclarationList
    BogusTypeDeclaration
      FloatingPointLiteral "1." @ 0..2 trailing=[Whitespace " "]
      FloatingPointLiteral ".2" @ 3..5 trailing=[Whitespace " "]
      FloatingPointLiteral "3e+4" @ 6..10 trailing=[Whitespace " "]
      FloatingPointLiteral "5e-6" @ 11..15 trailing=[Whitespace " "]
      FloatingPointLiteral "7f" @ 16..18 trailing=[Whitespace " "]
      FloatingPointLiteral "8D" @ 19..21 trailing=[Whitespace " "]
      FloatingPointLiteral "9.0d" @ 22..26 trailing=[Whitespace " "]
      FloatingPointLiteral "1.e2" @ 27..31 trailing=[Whitespace " "]
      FloatingPointLiteral ".2E-3" @ 32..37 trailing=[Whitespace " "]
      FloatingPointLiteral "1.2e3F" @ 38..44
  Eof "" @ 44..44

diagnostics:
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..2 message="unexpected token at top level"

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(2) }) message=unexpected token at top level
