crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_dollar_and_digits_in_identifiers.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
$value value1 _value

syntax:
syntax:
CompilationUnit
  FieldDeclaration
    ClassType
      Name
        Identifier "$value" @ 0..6 trailing=[Whitespace " "]
    VariableDeclaratorList
      VariableDeclarator
        Identifier "value1" @ 7..13 trailing=[Whitespace " "]
  FieldDeclaration
    ClassType
      Name
        Identifier "_value" @ 14..20
    VariableDeclaratorList
      VariableDeclarator
  Eof "" @ 20..20

diagnostics:
  code=java.parse.expected_syntax severity=Error stage=Parser range=14..20 message="expected `;` after field declaration"
  code=java.parse.expected_syntax severity=Error stage=Parser range=20..20 message="expected variable name"
  code=java.parse.expected_syntax severity=Error stage=Parser range=20..20 message="expected `;` after field declaration"

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(14), end: TextSize(20) }) message=expected `;` after field declaration
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(20), end: TextSize(20) }) message=expected variable name
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(20), end: TextSize(20) }) message=expected `;` after field declaration
