crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_empty_string_literals.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
""

syntax:
syntax:
CompilationUnit
  ErrorNode
    StringLiteral "\"\"" @ 0..2
  Eof "" @ 2..2

diagnostics:
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..2 message="unexpected token at top level"

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(2) }) message=unexpected token at top level
