crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_escape_sequences_in_character_and_string_literals.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
'\b' '\s' '\t' '\n' '\f' '\r' '\"' '\'' '\\' '\0' '\77' '\377' "\b\s\t\n\f\r\"\'\\\0\77\377"

syntax:
syntax:
CompilationUnit
  ErrorNode
    CharacterLiteral "'\\b'" @ 0..4 trailing=[Whitespace " "]
    CharacterLiteral "'\\s'" @ 5..9 trailing=[Whitespace " "]
    CharacterLiteral "'\\t'" @ 10..14 trailing=[Whitespace " "]
    CharacterLiteral "'\\n'" @ 15..19 trailing=[Whitespace " "]
    CharacterLiteral "'\\f'" @ 20..24 trailing=[Whitespace " "]
    CharacterLiteral "'\\r'" @ 25..29 trailing=[Whitespace " "]
    CharacterLiteral "'\\\"'" @ 30..34 trailing=[Whitespace " "]
    CharacterLiteral "'\\''" @ 35..39 trailing=[Whitespace " "]
    CharacterLiteral "'\\\\'" @ 40..44 trailing=[Whitespace " "]
    CharacterLiteral "'\\0'" @ 45..49 trailing=[Whitespace " "]
    CharacterLiteral "'\\77'" @ 50..55 trailing=[Whitespace " "]
    CharacterLiteral "'\\377'" @ 56..62 trailing=[Whitespace " "]
    StringLiteral "\"\\b\\s\\t\\n\\f\\r\\\"\\'\\\\\\0\\77\\377\"" @ 63..92
  Eof "" @ 92..92

diagnostics:
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..4 message="unexpected token at top level"

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(4) }) message=unexpected token at top level
