crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__recognizes_identifier_part_that_is_not_identifier_start.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
á

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    FieldDeclaration
      ClassType
        ClassTypeSegmentList
          ClassTypeSegmentNode
            AnnotationList
            Name
              Identifier "a\u{301}" @ 0..3
      VariableDeclaratorList
        VariableDeclarator
  Eof "" @ 3..3

diagnostics:
  code=java.parse.expected_syntax severity=Error stage=Parser range=3..3 message="expected variable name"
  code=java.parse.expected_syntax severity=Error stage=Parser range=3..3 message="expected `;` after field declaration"

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(3), end: TextSize(3) }) message=expected variable name
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(3), end: TextSize(3) }) message=expected `;` after field declaration
